--- a/KoOrderRegister/App.xaml
+++ b/KoOrderRegister/App.xaml
@@ -2,6 +2,7 @@
 <Application xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:local="clr-namespace:KoOrderRegister"
+             xmlns:entrycheker="clr-namespace:KoOrderRegister.EntryCheckers"
              x:Class="KoOrderRegister.App">
     <Application.Resources>
         <ResourceDictionary>
@@ -9,6 +10,10 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary>
+                <entrycheker:EmailValidationBehavior x:Key="EmailValidator" />
+            </ResourceDictionary>
+            
         </ResourceDictionary>
     </Application.Resources>
 </Application>
