--- a/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
+++ b/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
@@ -13,9 +13,9 @@
                   RowDefinitions="Auto"
                   >
                 <Label Text="{x:Static res:AppRes.SelectLanguage}"/>
-                <Picker ItemsSource="{Binding Customers}"
+                <Picker ItemsSource="{Binding LanguageSettings}"
                         SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
-                        ItemDisplayBinding="{Binding Name}"
+                        ItemDisplayBinding="{Binding DisplayName}"
                         Margin="10, 0, 10,10"
                         Grid.Row="1"
                         Grid.Column="1"/>
