--- a/KoOrderRegister/Modules/Order/Pages/OrderDetailsPage.xaml
+++ b/KoOrderRegister/Modules/Order/Pages/OrderDetailsPage.xaml
@@ -26,7 +26,7 @@
         <VerticalStackLayout Padding="20"
                              Spacing="20">
             <Grid ColumnDefinitions="Auto,*"
-                  RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto, Auto"
+                  RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto, Auto, Auto"
                   Margin="10, 10, 10, 10">
                 <!-- OrderNumber -->
                 <Label Text="{x:Static res:AppRes.OrderNumberLabel}"
@@ -80,25 +80,25 @@
                        Margin="10, 0, 10,10" />
                 <!-- Order Price -->
                 <Label Text="{x:Static res:AppRes.PriceLabel}"
-                       Grid.Row="4"
+                       Grid.Row="5"
                        Grid.Column="0"
                        VerticalOptions="Center" />
                 <Entry Text="{Binding Order.Price}"
-                       Grid.Row="4"
+                       Grid.Row="5"
                        Grid.Column="1"
                        Margin="10, 0, 10,10" />
                 <!-- Note -->
                 <Label Text="{x:Static res:AppRes.NoteLabel}"
-                       Grid.Row="5"
+                       Grid.Row="6"
                        Grid.Column="0"
                        VerticalOptions="Center" />
                 <Entry Text="{Binding Order.Note}"
-                       Grid.Row="5"
+                       Grid.Row="6"
                        Grid.Column="1"
                        Margin="10, 0, 10,10" />
             </Grid>
             <VerticalStackLayout
-                    Grid.Row="6"
+                    Grid.Row="7"
                     Spacing="10"
                     Padding="20"
                     >
