--- a/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
+++ b/KoOrderRegister/Modules/Settings/Pages/SettingsPage.xaml
@@ -6,49 +6,63 @@
              xmlns:vm="clr-namespace:KoOrderRegister.Modules.Settings.ViewModels"
              xmlns:converter="clr-namespace:KoOrderRegister.Modules.Order.List.Converters"
              Title="{x:Static res:AppRes.Settings}">
+
     <ScrollView>
-        <VerticalStackLayout>
-            <Grid Padding="10"
-                  ColumnDefinitions="Auto, *"
-                  RowDefinitions="Auto, Auto, Auto"
-                  >
-                <Label Text="{x:Static res:AppRes.SelectLanguage}"
-                       Grid.Row="0"
-                       Grid.Column="0"
-                       Margin="10, 0, 10,10"
-                       />
-                <Picker ItemsSource="{Binding LanguageSettings}"
-                        SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
-                        ItemDisplayBinding="{Binding DisplayName}"
-                        Margin="10, 0, 10,10"
-                        Grid.Row="0"
-                        Grid.Column="1"/>
+        <Grid>
+                <Grid Padding="10"
+                      ColumnDefinitions="Auto, *"
+                      RowDefinitions="Auto, Auto, Auto">
+                    <Label Text="{x:Static res:AppRes.SelectLanguage}"
+                           Grid.Row="0"
+                           Grid.Column="0"
+                           Margin="10, 0, 10,10" />
+                    <Picker ItemsSource="{Binding LanguageSettings}"
+                            SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                            ItemDisplayBinding="{Binding DisplayName}"
+                            Margin="10, 0, 10,10"
+                            Grid.Row="0"
+                            Grid.Column="1" />
 
-                <Label Text="{x:Static res:AppRes.BackupDatabaseLabel}"
-                       Grid.Row="1"
-                       Grid.Column="0"
-                       Margin="10, 20, 10,10"
-                       />
-                <Button Text="{x:Static res:AppRes.BackupDatabase}"
-                        Grid.Row="1"
-                        Grid.Column="2"
-                        Command="{Binding BackUpDatabaseCommand}"
-                        Margin="10, 10, 10,10"
-                        />
+                    <Label Text="{x:Static res:AppRes.BackupDatabaseLabel}"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           Margin="10, 20, 10,10" />
+                    <Button Text="{x:Static res:AppRes.BackupDatabase}"
+                            Grid.Row="1"
+                            Grid.Column="2"
+                            Command="{Binding BackUpDatabaseCommand}"
+                            Margin="10, 10, 10,10" />
 
-                <Label Text="{x:Static res:AppRes.RestoreDatabaseLabel}"
-                       Grid.Row="2"
-                       Grid.Column="0"
-                       Margin="10, 20, 10,10" 
-                       />
-                <Button Text="{x:Static res:AppRes.RestoreDatabase}"
-                        Grid.Row="2"
-                        Grid.Column="2"
-                        Command="{Binding RestoreDatabaseCommand}"
-                        Margin="10, 10, 10,10"
-                        />
+                    <Label Text="{x:Static res:AppRes.RestoreDatabaseLabel}"
+                           Grid.Row="2"
+                           Grid.Column="0"
+                           Margin="10, 20, 10,10" />
+                    <Button Text="{x:Static res:AppRes.RestoreDatabase}"
+                            Grid.Row="2"
+                            Grid.Column="2"
+                            Command="{Binding RestoreDatabaseCommand}"
+                            Margin="10, 10, 10,10" />
 
+
+
+
+                </Grid>
+                <Grid IsVisible="{Binding IsLoading}"
+                      BackgroundColor="{AppThemeBinding Light=White, Dark=Black}"
+                      Opacity="0.8">
+                <VerticalStackLayout>
+                    <ActivityIndicator IsRunning="{Binding IsLoading}"
+                                       HorizontalOptions="Center"
+                                       HeightRequest="250"
+                                       WidthRequest="250"
+                                       VerticalOptions="Center" 
+                                       Margin="25"/>
+                    <Label Text="{x:Static res:AppRes.Loading}" 
+                           VerticalOptions="Center" 
+                           HorizontalOptions="Center"
+                           Margin="20"/>
+                </VerticalStackLayout>
             </Grid>
-        </VerticalStackLayout>
+            </Grid>
     </ScrollView>
 </ContentPage>
