--- a/KoOrderRegister/Modules/Order/Pages/OrderDetailsPage.xaml
+++ b/KoOrderRegister/Modules/Order/Pages/OrderDetailsPage.xaml
@@ -21,94 +21,90 @@
     </ContentPage.ToolbarItems>
 
 
+    <Grid>
+        <ScrollView>
+            <VerticalStackLayout Padding="20"
+                                 Spacing="20">
+                <Grid ColumnDefinitions="Auto,*"
+                      RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto, Auto, Auto"
+                      Margin="10, 10, 10, 10">
+                    <!-- OrderNumber -->
+                    <Label Text="{x:Static res:AppRes.OrderNumberLabel}"
+                           Grid.Row="0"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                    <Entry Text="{Binding Order.OrderNumber}"
+                           Grid.Row="0"
+                           Grid.Column="1"
+                           Margin="10, 0, 10,10" />
 
-    <ScrollView>
-        <VerticalStackLayout Padding="20"
-                             Spacing="20">
-            <Grid ColumnDefinitions="Auto,*"
-                  RowDefinitions="Auto,Auto,Auto,Auto,Auto,Auto, Auto, Auto"
-                  Margin="10, 10, 10, 10">
-                <!-- OrderNumber -->
-                <Label Text="{x:Static res:AppRes.OrderNumberLabel}"
-                       Grid.Row="0"
-                       Grid.Column="0"
-                       VerticalOptions="Center" 
-                       />
-                <Entry Text="{Binding Order.OrderNumber}"
-                       Grid.Row="0"
-                       Grid.Column="1"
-                       Margin="10, 0, 10,10" />
+                    <!-- Customers -->
+                    <Label Text="{x:Static res:AppRes.SelectCustomer}"
+                           Grid.Row="1"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                    <Picker ItemsSource="{Binding Customers}"
+                            SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
+                            ItemDisplayBinding="{Binding Name}"
+                            Margin="10, 0, 10,10"
+                            Grid.Row="1"
+                            Grid.Column="1" />
 
-                <!-- Customers -->
-                <Label Text="{x:Static res:AppRes.SelectCustomer}"
-                       Grid.Row="1"
-                       Grid.Column="0"
-                       VerticalOptions="Center" />
-                <Picker ItemsSource="{Binding Customers}"
-                        SelectedItem="{Binding SelectedItem, Mode=TwoWay}"
-                        ItemDisplayBinding="{Binding Name}"
-                        Margin="10, 0, 10,10"
-                        Grid.Row="1"
-                        Grid.Column="1" />
-
-                <!-- OrderDate -->
-                <Label Text="{x:Static res:AppRes.StartDateLabel}"
-                       Grid.Row="2"
-                       Grid.Column="0"
-                       VerticalOptions="Center" />
-                <DatePicker Date="{Binding Order.StartDate}"
-                            Grid.Row="2"
-                            Grid.Column="1"
-                            Margin="10, 0, 10,10" />
-                <Label Text="{x:Static res:AppRes.OutDateLabel}"
-                       Grid.Row="3"
-                       Grid.Column="0"
-                       VerticalOptions="Center"
-                        />
-                <DatePicker Date="{Binding Order.EndOrder}"
-                            Grid.Row="3"
-                            Grid.Column="1"
-                            Margin="10, 0, 10,10"/>
-                <!-- Product id-->
-                <Label Text="{x:Static res:AppRes.ProductIdLabel}"
-                       Grid.Row="4"
-                       Grid.Column="0"
-                       VerticalOptions="Center" />
-                <Entry Text="{Binding Order.ProductId}"
-                       Grid.Row="4"
-                       Grid.Column="1"
-                       Margin="10, 0, 10,10" />
-                <!-- Order Price -->
-                <Label Text="{x:Static res:AppRes.PriceLabel}"
-                       Grid.Row="5"
-                       Grid.Column="0"
-                       VerticalOptions="Center" />
-                <Entry Text="{Binding Order.Price}"
-                       Grid.Row="5"
-                       Grid.Column="1"
-                       Margin="10, 0, 10,10" />
-                <!-- Note -->
-                <Label Text="{x:Static res:AppRes.NoteLabel}"
-                       Grid.Row="6"
-                       Grid.Column="0"
-                       VerticalOptions="Center" />
-                <Entry Text="{Binding Order.Note}"
-                       Grid.Row="6"
-                       Grid.Column="1"
-                       Margin="10, 0, 10,10" />
-            </Grid>
-            <VerticalStackLayout
-                    Grid.Row="7"
-                    Spacing="10"
-                    Padding="20"
-                    >
+                    <!-- OrderDate -->
+                    <Label Text="{x:Static res:AppRes.StartDateLabel}"
+                           Grid.Row="2"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                    <DatePicker Date="{Binding Order.StartDate}"
+                                Grid.Row="2"
+                                Grid.Column="1"
+                                Margin="10, 0, 10,10" />
+                    <Label Text="{x:Static res:AppRes.OutDateLabel}"
+                           Grid.Row="3"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                    <DatePicker Date="{Binding Order.EndOrder}"
+                                Grid.Row="3"
+                                Grid.Column="1"
+                                Margin="10, 0, 10,10" />
+                    <!-- Product id-->
+                    <Label Text="{x:Static res:AppRes.ProductIdLabel}"
+                           Grid.Row="4"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                    <Entry Text="{Binding Order.ProductId}"
+                           Grid.Row="4"
+                           Grid.Column="1"
+                           Margin="10, 0, 10,10" />
+                    <!-- Order Price -->
+                    <Label Text="{x:Static res:AppRes.PriceLabel}"
+                           Grid.Row="5"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                    <Entry Text="{Binding Order.Price}"
+                           Grid.Row="5"
+                           Grid.Column="1"
+                           Margin="10, 0, 10,10" />
+                    <!-- Note -->
+                    <Label Text="{x:Static res:AppRes.NoteLabel}"
+                           Grid.Row="6"
+                           Grid.Column="0"
+                           VerticalOptions="Center" />
+                    <Entry Text="{Binding Order.Note}"
+                           Grid.Row="6"
+                           Grid.Column="1"
+                           Margin="10, 0, 10,10" />
+                </Grid>
+                <VerticalStackLayout Grid.Row="7"
+                                     Spacing="10"
+                                     Padding="20">
                     <Grid ColumnDefinitions="*"
-                      RowDefinitions="Auto, Auto">
+                          RowDefinitions="Auto, Auto">
                         <Button Text="{x:Static res:AppRes.SelectFiles}"
-                                Command="{Binding SelectedFilesCommand}" 
+                                Command="{Binding SelectedFilesCommand}"
                                 Grid.Row="0"
                                 Grid.Column="0"
-                            Margin="10, 0, 10,10" />
+                                Margin="10, 0, 10,10" />
                         <CollectionView x:Name="filesList"
                                         Grid.Row="1"
                                         Grid.Column="0"
@@ -117,33 +113,33 @@
                                 <DataTemplate>
                                     <Grid RowDefinitions="*"
                                           ColumnDefinitions="Auto, *, Auto, Auto, Auto">
-                                    <Label Text="{x:Static res:AppRes.NameLabel}"
-                                           Grid.Column="0"
-                                           Grid.Row="0"
-                                           VerticalOptions="Center" />
+                                        <Label Text="{x:Static res:AppRes.NameLabel}"
+                                               Grid.Column="0"
+                                               Grid.Row="0"
+                                               VerticalOptions="Center" />
 
-                                    <Entry Text="{Binding Name}"
+                                        <Entry Text="{Binding Name}"
                                                Grid.Column="1"
                                                Grid.Row="0"
-                                           Margin="10, 0, 10,10" />
+                                               Margin="10, 0, 10,10" />
 
-                                    <Image Grid.Column="2"
-                                           Grid.Row="0"
-                                           Source="{AppThemeBinding Light='x_light.png', Dark='x_dark.png'}"
-                                           VerticalOptions="Start"
-                                           HorizontalOptions="Start"
-                                           Aspect="AspectFit"
-                                           Margin="10, 10, 0, 0"
-                                           WidthRequest="20"
-                                           HeightRequest="20">
-                                        <Image.GestureRecognizers>
-                                            <TapGestureRecognizer Command="{Binding Path=BindingContext.RemoveFileCommand, Source={x:Reference Name=filesList}}"
-                                                                  CommandParameter="{Binding .}" />
-                                        </Image.GestureRecognizers>
-                                    </Image>
-                                    <Image Grid.Column="3"
+                                        <Image Grid.Column="2"
                                                Grid.Row="0"
-                                               IsVisible="{Binding Content, Converter={StaticResource FileContentToVisibility}}"
+                                               Source="{AppThemeBinding Light='x_light.png', Dark='x_dark.png'}"
+                                               VerticalOptions="Start"
+                                               HorizontalOptions="Start"
+                                               Aspect="AspectFit"
+                                               Margin="10, 10, 0, 0"
+                                               WidthRequest="20"
+                                               HeightRequest="20">
+                                            <Image.GestureRecognizers>
+                                                <TapGestureRecognizer Command="{Binding Path=BindingContext.RemoveFileCommand, Source={x:Reference Name=filesList}}"
+                                                                      CommandParameter="{Binding .}" />
+                                            </Image.GestureRecognizers>
+                                        </Image>
+                                        <Image Grid.Column="3"
+                                               Grid.Row="0"
+                                               IsVisible="{Binding IsDatabaseContent}"
                                                Source="{AppThemeBinding Light='open_light.png', Dark='open_dark.png'}"
                                                VerticalOptions="Start"
                                                HorizontalOptions="Start"
@@ -158,7 +154,7 @@
                                         </Image>
                                         <Image Grid.Column="4"
                                                Grid.Row="0"
-                                               IsVisible="{Binding Content, Converter={StaticResource FileContentToVisibility}}"
+                                               IsVisible="{Binding IsDatabaseContent}"
                                                Source="{AppThemeBinding Light='save_light.png', Dark='save_dark.png'}"
                                                VerticalOptions="Start"
                                                HorizontalOptions="Start"
@@ -171,33 +167,50 @@
                                                                       CommandParameter="{Binding .}" />
                                             </Image.GestureRecognizers>
                                         </Image>
-                                </Grid>
+                                    </Grid>
                                 </DataTemplate>
                             </CollectionView.ItemTemplate>
                         </CollectionView>
                     </Grid>
-                    
+
                 </VerticalStackLayout>
 
 
-            
 
-            <Grid ColumnDefinitions="*,*"
-                  RowDefinitions="Auto">
 
-                <Button Text="{x:Static res:AppRes.Save}"
-                        Command="{Binding SaveCommand}"
-                        Grid.Row="0"
-                        Grid.Column="1"
-                        Margin="10, 10, 10, 10" />
-                <Button Text="{x:Static res:AppRes.Delete}"
-                        Command="{Binding DeleteCommand}"
-                        IsEnabled="{Binding IsEdit}"
-                        Grid.Row="0"
-                        Grid.Column="0"
-                        Margin="10, 10, 10, 10" />
-            </Grid>
-        </VerticalStackLayout>
-    </ScrollView>
+                <Grid ColumnDefinitions="*,*"
+                      RowDefinitions="Auto">
+
+                    <Button Text="{x:Static res:AppRes.Save}"
+                            Command="{Binding SaveCommand}"
+                            Grid.Row="0"
+                            Grid.Column="1"
+                            Margin="10, 10, 10, 10" />
+                    <Button Text="{x:Static res:AppRes.Delete}"
+                            Command="{Binding DeleteCommand}"
+                            IsEnabled="{Binding IsEdit}"
+                            Grid.Row="0"
+                            Grid.Column="0"
+                            Margin="10, 10, 10, 10" />
+                </Grid>
+            </VerticalStackLayout>
+        </ScrollView>
+        <Grid IsVisible="{Binding IsLoading}"
+              BackgroundColor="{AppThemeBinding Light=White, Dark=Black}"
+              Opacity="0.8">
+            <VerticalStackLayout>
+                <ActivityIndicator IsRunning="{Binding IsLoading}"
+                                   HorizontalOptions="Center"
+                                   HeightRequest="250"
+                                   WidthRequest="250"
+                                   VerticalOptions="Center"
+                                   Margin="25" />
+                <Label Text="{x:Static res:AppRes.Save}"
+                       VerticalOptions="Center"
+                       HorizontalOptions="Center"
+                       Margin="20" />
+            </VerticalStackLayout>
+        </Grid>
+    </Grid>
 
 </ContentPage>
