--- a/KoOrderRegister/Modules/Order/Pages/OrderListPage.xaml
+++ b/KoOrderRegister/Modules/Order/Pages/OrderListPage.xaml
@@ -29,7 +29,7 @@
                        Grid.Column="0"
                        FontAttributes="Bold"
                        HorizontalOptions="Center" />
-                <Label Text="{x:Static res:AppRes.StartDate}"
+                <Label Text="{x:Static res:AppRes.Date}"
                        Grid.Column="1"
                        FontAttributes="Bold"
                        HorizontalOptions="Center" />
@@ -66,7 +66,7 @@
                                 <Label Text="{Binding OrderNumber}"
                                        Grid.Column="0"
                                        HorizontalOptions="Center" />
-                                <Label Text="{Binding StartDate}"
+                                <Label Text="{Binding OrderDate}"
                                        Grid.Column="1"
                                        HorizontalOptions="Center" />
                                 <Label Text="{Binding Customer.Name}"
