--- a/KoOrderRegister/Modules/Customer/Pages/CustomerListPage.xaml
+++ b/KoOrderRegister/Modules/Customer/Pages/CustomerListPage.xaml
@@ -22,61 +22,79 @@
                        SearchCommand="{Binding SearchCommand}"
                        TextChanged="OnTextChanged"
                        SearchCommandParameter="{Binding Text, Source={x:Reference searchBar}}" />
-            <Grid Padding="10"
-                  RowDefinitions="Auto"
-                  ColumnDefinitions="*,*,*">
-                <Label Text="{x:Static res:AppRes.Name}"
-                       Grid.Column="0"
-                       FontAttributes="Bold"
-                       HorizontalOptions="Center" />
-                <Label Text="{x:Static res:AppRes.NHI}"
-                       Grid.Column="1"
-                       FontAttributes="Bold"
-                       HorizontalOptions="Center" />
-                <Label Text="{x:Static res:AppRes.Phone}"
-                       Grid.Column="2"
-                       FontAttributes="Bold"
-                       HorizontalOptions="Center" />
+            <Grid RowDefinitions="*,*">
+                <Grid Padding="10"
+                      RowDefinitions="Auto"
+                      ColumnDefinitions="*,*,*">
+                    <Label Text="{x:Static res:AppRes.Name}"
+                           Grid.Column="0"
+                           FontAttributes="Bold"
+                           HorizontalOptions="Center" />
+                    <Label Text="{x:Static res:AppRes.NHI}"
+                           Grid.Column="1"
+                           FontAttributes="Bold"
+                           HorizontalOptions="Center" />
+                    <Label Text="{x:Static res:AppRes.Phone}"
+                           Grid.Column="2"
+                           FontAttributes="Bold"
+                           HorizontalOptions="Center" />
+                </Grid>
+                <ListView x:Name="customersListView"
+                          ItemsSource="{Binding Customers}">
+                    <ListView.ItemTemplate>
+                        <DataTemplate>
+                            <ViewCell>
+                                <!-- Context menu -->
+                                <ViewCell.ContextActions>
+                                    <MenuItem Text="{x:Static res:AppRes.Edit}"
+                                              Command="{Binding Path=BindingContext.EditCustomerCommand, Source={x:Reference Name=customersListView}}"
+                                              CommandParameter="{Binding .}" />
+
+                                    <MenuItem Text="{x:Static res:AppRes.Delete}"
+                                              IsDestructive="True"
+                                              Command="{Binding Path=BindingContext.DeleteCustomerCommand, Source={x:Reference Name=customersListView}}"
+                                              CommandParameter="{Binding .}" />
+                                </ViewCell.ContextActions>
+                                <Grid Padding="10"
+                                      RowDefinitions="Auto, Auto"
+                                      ColumnDefinitions="*,*,*">
+                                    <Grid.GestureRecognizers>
+                                        <TapGestureRecognizer NumberOfTapsRequired="1"
+                                                              Command="{Binding Path=BindingContext.EditCustomerCommand, Source={x:Reference Name=customersListView}}"
+                                                              CommandParameter="{Binding .}" />
+                                    </Grid.GestureRecognizers>
+
+                                    <Label Text="{Binding Name}"
+                                           Grid.Column="0"
+                                           HorizontalOptions="Center" />
+                                    <Label Text="{Binding NationalHealthInsurance}"
+                                           Grid.Column="1"
+                                           HorizontalOptions="Center" />
+                                    <Label Text="{Binding Phone}"
+                                           Grid.Column="2"
+                                           HorizontalOptions="Center" />
+                                </Grid>
+                            </ViewCell>
+                        </DataTemplate>
+                    </ListView.ItemTemplate>
+                </ListView>
+                <Grid IsVisible="{Binding IsLoading}"
+                      BackgroundColor="{AppThemeBinding Light=White, Dark=Black}"
+                      Opacity="0.4">
+                    <VerticalStackLayout>
+                        <ActivityIndicator IsRunning="{Binding IsLoading}"
+                                           HorizontalOptions="Center"
+                                           HeightRequest="250"
+                                           WidthRequest="250"
+                                           VerticalOptions="Center"
+                                           Margin="25" />
+                        <Label Text="{x:Static res:AppRes.Loading}"
+                               VerticalOptions="Center"
+                               HorizontalOptions="Center"
+                               Margin="20" />
+                    </VerticalStackLayout>
+                </Grid>
             </Grid>
-            <ListView x:Name="customersListView"
-                      ItemsSource="{Binding Customers}">
-                <ListView.ItemTemplate>
-                    <DataTemplate>
-                        <ViewCell>
-                            <!-- Context menu -->
-                            <ViewCell.ContextActions>
-                                <MenuItem Text="{x:Static res:AppRes.Edit}"
-                                          Command="{Binding Path=BindingContext.EditCustomerCommand, Source={x:Reference Name=customersListView}}"
-                                          CommandParameter="{Binding .}" />
-
-                                <MenuItem Text="{x:Static res:AppRes.Delete}"
-                                          IsDestructive="True"
-                                          Command="{Binding Path=BindingContext.DeleteCustomerCommand, Source={x:Reference Name=customersListView}}"
-                                          CommandParameter="{Binding .}" />
-                            </ViewCell.ContextActions>
-                            <Grid Padding="10"
-                                  RowDefinitions="Auto, Auto"
-                                  ColumnDefinitions="*,*,*">
-                                <Grid.GestureRecognizers>
-                                    <TapGestureRecognizer NumberOfTapsRequired="1"
-                                                          Command="{Binding Path=BindingContext.EditCustomerCommand, Source={x:Reference Name=customersListView}}"
-                                                          CommandParameter="{Binding .}" />
-                                </Grid.GestureRecognizers>
-
-                                <Label Text="{Binding Name}"
-                                       Grid.Column="0"
-                                       HorizontalOptions="Center" />
-                                <Label Text="{Binding NationalHealthInsurance}"
-                                       Grid.Column="1"
-                                       HorizontalOptions="Center" />
-                                <Label Text="{Binding Phone}"
-                                       Grid.Column="2"
-                                       HorizontalOptions="Center" />
-                            </Grid>
-                        </ViewCell>
-                    </DataTemplate>
-                </ListView.ItemTemplate>
-            </ListView>
         </VerticalStackLayout>
     </ScrollView>
 </ContentPage>
