--- a/KoOrderRegister/Modules/Customer/Pages/CustomerListPage.xaml
+++ b/KoOrderRegister/Modules/Customer/Pages/CustomerListPage.xaml
@@ -8,22 +8,26 @@
     <ContentPage.ToolbarItems>
         <ToolbarItem Text="{x:Static res:AppRes.Update}"
                      IconImageSource="{AppThemeBinding Light='update_light.png', Dark='update_dark.png'}"
-                     Command="{Binding UpdateCommand}" />
+                     Command="{Binding UpdateCommand}"
+                     ToolTipProperties.Text="{x:Static res:AppRes.Update}"/>
         <ToolbarItem Text="{x:Static res:AppRes.AddNewCustomer}"
                      IconImageSource="{AppThemeBinding Light='add_light.png', Dark='add_dark.png'}"
-                     Command="{Binding AddNewCustomerCommand}" />
+                     Command="{Binding AddNewCustomerCommand}"
+                     ToolTipProperties.Text="{x:Static res:AppRes.AddNewCustomer}" />
     </ContentPage.ToolbarItems>
 
 
     <ScrollView>
-        <VerticalStackLayout Padding="20">
+        <VerticalStackLayout>
+            <StackLayout Padding="3, 10, 3, 20">
             <SearchBar x:Name="searchBar"
                        Placeholder="{x:Static res:AppRes.Search}"
                        SearchCommand="{Binding SearchCommand}"
                        TextChanged="OnTextChanged"
                        SearchCommandParameter="{Binding Text, Source={x:Reference searchBar}}" />
+            </StackLayout>
             <Grid RowDefinitions="*,*">
-                <Grid Padding="10"
+                <Grid Padding="3, 0, 0, 3"
                       RowDefinitions="Auto"
                       ColumnDefinitions="*,*,*"
                       Grid.Row="0">
@@ -57,9 +61,18 @@
                                               Command="{Binding Path=BindingContext.DeleteCustomerCommand, Source={x:Reference Name=customersListView}}"
                                               CommandParameter="{Binding .}" />
                                 </ViewCell.ContextActions>
-                                <Grid Padding="10"
-                                      RowDefinitions="Auto, Auto"
-                                      ColumnDefinitions="*,*,*">
+                                <Grid>
+                                    <Grid.ColumnDefinitions >
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="*" />
+                                        <ColumnDefinition Width="*" />
+                                    </Grid.ColumnDefinitions>
+
+                                    <Grid.RowDefinitions >
+                                        <RowDefinition Height="Auto" />
+                                        <RowDefinition Height="Auto"/>
+                                    </Grid.RowDefinitions>
+                                    
                                     <Grid.GestureRecognizers>
                                         <TapGestureRecognizer NumberOfTapsRequired="1"
                                                               Command="{Binding Path=BindingContext.EditCustomerCommand, Source={x:Reference Name=customersListView}}"
@@ -68,13 +81,19 @@
 
                                     <Label Text="{Binding Name}"
                                            Grid.Column="0"
-                                           HorizontalOptions="Center" />
+                                           HorizontalOptions="Center"
+                                           VerticalOptions="Center"
+                                           Margin="2, 25, 0, 25" />
                                     <Label Text="{Binding NationalHealthInsurance}"
                                            Grid.Column="1"
-                                           HorizontalOptions="Center" />
+                                           HorizontalOptions="Center"
+                                           VerticalOptions="Center"
+                                           Margin="2, 25, 0, 25" />
                                     <Label Text="{Binding Phone}"
                                            Grid.Column="2"
-                                           HorizontalOptions="Center" />
+                                           HorizontalOptions="Center"
+                                           VerticalOptions="Center"
+                                           Margin="2, 25, 0, 25" />
                                 </Grid>
                             </ViewCell>
                         </DataTemplate>
